examples/test/testpolicy5770.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5770
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key10: value8
      key44: value48
      key16: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value35
          key18: value15
      podSelector:
        matchLabels:
          key8: value34
